# rust-symcrypt-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
inc/: libsymcrypt.so.103.1.0  wrapper.h
mickey_mouse/: main.c  symcrypttestmodule.lib
rust-symcrypt/: Cargo.toml  README.md  build.rs
rust-symcrypt/src/: block_ciphers.rs  chacha.rs  curve_type.rs  ecdh.rs  eckey.rs  ecurve.rs  errors.rs  gcm.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  mac_algorithms.rs  main.rs  prf.rs
src/: lib.rs  main.rs
symcrypt-bindgen/: Cargo.toml  README.md  build.rs
symcrypt-bindgen/src/: main.rs
symcrypt-sys/: Cargo.toml  README.md  build.rs  wrapper.h
symcrypt-sys/inc/: symcrypttestmodule.lib  wrapper.h
symcrypt-sys/src/: lib.rs  main.rs  symcrypt_bindings.rs
symcrypt/src/: lib.rs  main.rs
