[package]
name = "symcrypt-sys"
authors = ["nnmkhang"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "SymCrypt for Rust"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
libloading = "0.8"

[build-dependencies]
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
vcpkg = "0.2"
libloading = "0.8"
